feat(dashboard): update admin_dashboard_screen and add ARB key

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -802,6 +802,7 @@
   "categorySelected": "Category selected",
   "adminSignInTitle": "Admin Sign-In",
   "adminSignInDescription": "Sign in to manage orders, staff, and restaurant data.",
-  "adminOnlyNotice": "This portal is for authorized restaurant administrators only."
+  "adminOnlyNotice": "This portal is for authorized restaurant administrators only.",
+  "addMenuTab": "Add Menus"
 
   }
