fix(menu-editor): use correct constructor params for DynamicMenuItemEditorScreen and prevent double Navigator.pop on save & Update arb

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -803,6 +803,7 @@
   "adminSignInTitle": "Admin Sign-In",
   "adminSignInDescription": "Sign in to manage orders, staff, and restaurant data.",
   "adminOnlyNotice": "This portal is for authorized restaurant administrators only.",
-  "addMenuTab": "Add Menus"
+  "addMenuTab": "Add Menus",
+  "editItem": "Edit Item"
 
   }
