Enhance error log management: new paginated table, localized filter/stat/detail screens, new widgets, and improved UX/a11y

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -814,6 +814,88 @@
   "signOut": "Sign Out",
   "chatManagementTitle": "Chat Management",
   "settings": "Settings",
-  "unavailable": "Unavailable"
-
+  "unavailable": "Unavailable",
+  "unauthorizedAccessTitle": "Unauthorized Access",
+  "unauthorizedAccessMessage": "You do not have permission to view this page. Please contact an administrator if you believe this is an error.",
+  "returnHome": "Return to Home",
+  "errorLogManagementTitle": "Error Log Management",
+  "toggleArchivedTooltip": "Show or hide archived error logs",
+  "showingArchived": "Showing Archived",
+  "hideArchived": "Hide Archived",
+  "resolvedFilterTooltip": "Filter by resolved/unresolved status",
+  "resolved": "Resolved",
+  "all": "All",
+  "unresolvedOnly": "Unresolved Only",
+  "resolvedOnly": "Resolved Only",
+  "errorLoadingTitle": "Error Loading Logs",
+  "errorLoadingMessage": "There was a problem loading error logs. Please try again.",
+  "retry": "Retry",
+  "noErrorLogsTitle": "No Error Logs",
+  "noErrorLogsMessage": "No error logs were found matching your filters.",
+  "messageTooltip": "The error message",
+  "userId": "User ID",
+  "userIdTooltip": "ID of the user who experienced the error",
+  "resolved": "Resolved",
+  "resolvedTooltip": "Resolved status",
+  "unresolvedOnly": "Unresolved Only",
+  "archived": "Archived",
+  "archivedTooltip": "Archived status",
+  "notArchived": "Not Archived",
+  "timeTooltip": "The time this error log was recorded",
+  "severity": "Severity",
+  "severityTooltip": "The severity level of the error",
+  "source": "Source",
+  "sourceTooltip": "The source of the error (API, client, etc.)",
+  "screen": "Screen",
+  "screenTooltip": "The screen where the error occurred",
+  "errorDetailsTitle": "Error Details",
+  "stackTraceSection": "Stack Trace",
+  "contextDataSection": "Context Data",
+  "deviceInfoSection": "Device Info",
+  "commentsSection": "Comments",
+  "resolved": "Resolved",
+  "unresolvedOnly": "Unresolved",
+  "resolvedTooltip": "This error is marked as resolved",
+  "unresolvedTooltip": "This error is not resolved",
+  "archived": "Archived",
+  "notArchived": "Not Archived",
+  "archivedTooltip": "This error is archived",
+  "notArchivedTooltip": "This error is not archived",
+  "active": "Active",
+  "userIdTooltip": "ID of the user who experienced the error",
+  "userLabel": "User",
+  "addCommentHint": "Add a comment...",
+  "addCommentTooltip": "Add your comment to this error log",
+  "commentAdded": "Comment added.",
+  "copy": "Copy",
+  "copiedJson": "Copied error JSON!",
+  "copyErrorTooltip": "Copy error details as JSON",
+  "resolve": "Resolve",
+  "unresolve": "Unresolve",
+  "resolveTooltip": "Mark this error as resolved",
+  "unresolveTooltip": "Mark this error as unresolved",
+  "archive": "Archive",
+  "unarchive": "Unarchive",
+  "archiveTooltip": "Archive this error log",
+  "unarchiveTooltip": "Unarchive this error log",
+  "close": "Close",
+  "closeTooltip": "Close this dialog",
+  "justNow": "Just now",
+  "minutesAgo": "{minutes} minutes ago",
+  "hoursAgo": "{hours} hours ago",
+  "daysAgo": "{days} days ago",
+  "fatal": "Fatal",
+  "info": "Info",
+  "sourceTooltip": "Filter by error source",
+  "dateRangeTooltip": "Select a date range for error logs",
+  "dateRange": "Date Range",
+  "clearDateFilter": "Clear date filter",
+  "screenTooltip": "Filter by screen name",
+  "searchTooltip": "Search error log messages",
+  "totalErrorsTooltip": "Total number of errors: {total}",
+  "criticalErrorsTooltip": "Number of critical or fatal errors: {count}",
+  "warningErrorsTooltip": "Number of warning-level errors: {count}",
+  "infoErrorsTooltip": "Number of info-level errors: {count}",
+  "critical": "Critical",
+  "warnings": "Warnings"
   }
