Implement full developer/admin login flow with franchise context locking, onboarding, and error handling

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -914,7 +914,32 @@
   "featureToggleLoadError": "Failed to load feature toggles.",
   "retryButton": "Retry",
   "ownerTogglesSection": "Features You Can Control",
-  "devOnlyTogglesSection": "Developer/Platform Only Features"
-
+  "devOnlyTogglesSection": "Developer/Platform Only Features",
+  "switchFranchise": "Switch Franchise",
+  "developerDashboardTitle": "Developer Dashboard",
+  "accountDetails": "Account Details",
+  "role": "Role",
+  "status": "Status",
+  "language": "Language",
+  "defaultFranchise": "Default Franchise",
+  "themeMode": "Theme Mode",
+  "systemDefault": "System Default",
+  "notifications": "Notifications",
+  "enabled": "Enabled",
+  "futureFeatures": "Future Features",
+  "unauthorizedAccess": "Unauthorized access. Developer/admin role required.",
+  "staffDirectory": "Staff Directory",
+  "errorLoadingStaff": "Error loading staff list.",
+  "noStaffFound": "No staff members found.",
+  "onboardingChecklist": "Onboarding Checklist",
+  "markAsComplete": "Mark as Complete",
+  "profileCompleted": "Profile Completed",
+  "menuUploaded": "Menu Uploaded",
+  "inventoryLoaded": "Inventory Loaded",
+  "staffInvited": "Staff Invited",
+  "testOrderPlaced": "Test Order Placed",
+  "errorLoadingFranchises": "Error loading franchises.",
+  "noFranchisesFound": "No franchises found.",
+  "loadingPleaseWait": "Loading please wait.."
 
   }
