Refactor developer flow: add franchise selector dialog, update routing and Firestore fetch

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -940,6 +940,7 @@
   "testOrderPlaced": "Test Order Placed",
   "errorLoadingFranchises": "Error loading franchises.",
   "noFranchisesFound": "No franchises found.",
-  "loadingPleaseWait": "Loading please wait.."
+  "loadingPleaseWait": "Loading please wait..",
+  "failedToLoadFranchises": "Failed to load franchises. Please try again."
 
   }
