Implement developer dashboard screens, error logs, impersonation tools, plugin config dialog, and localization updates.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -941,6 +941,160 @@
   "errorLoadingFranchises": "Error loading franchises.",
   "noFranchisesFound": "No franchises found.",
   "loadingPleaseWait": "Loading please wait..",
-  "failedToLoadFranchises": "Failed to load franchises. Please try again."
+  "failedToLoadFranchises": "Failed to load franchises. Please try again.",
+  "allFranchisesLabel": "All Franchises",
+  "dashboardOverview": "Overview",
+  "dashboardErrorLoadingStats": "Failed to load dashboard statistics.",
+  "analyticsTrendsComingSoon": "Analytics Trends (Coming Soon)",
+  "analyticsTrendsDesc": "Advanced business trends, customer segmentation, and growth predictions coming soon.",
+  "aiInsightsComingSoon": "AI Insights (Coming Soon)",
+  "aiInsightsDesc": "AI-powered suggestions, anomaly detection, and forecasts will appear here.",
+  "dashboardRevenue": "Revenue",
+  "dashboardOrders": "Orders",
+  "dashboardUniqueCustomers": "Unique Customers",
+  "dashboardTopSeller": "Top Seller",
+  "dashboardAvgOrderValue": "Avg. Order Value",
+  "dashboardAppVersion": "App Version",
+  "dashboardHealthGood": "System Health: Good",
+  "dashboardHealthWarning": "System Health: Warning",
+  "dashboardHealthError": "System Health: Error",
+  "dashboardLastSync": "Last Sync",
+  "developerMetricsComingSoon": "Developer Metrics (Coming Soon)",
+  "developerMetricsDesc": "Detailed system metrics and advanced developer tools will be shown here.",
+  "allFranchisesLabel": "All Franchises",
+  "impersonationToolsTitle": "User Impersonation Tools",
+  "impersonationToolsDesc": "Search and impersonate users within this franchise for debugging and support. All actions are logged. Impersonation is only available for developer accounts.",
+  "impersonationToolsLoadError": "Failed to load user list.",
+  "impersonationToolsSearchHint": "Search by email or role...",
+  "impersonationToolsNoUsersFound": "No users found for this franchise.",
+  "impersonationToolsRoleLabel": "Role",
+  "impersonationToolsImpersonate": "Impersonate",
+  "impersonationToolsImpersonating": "Impersonating",
+  "impersonationToolsRecentImpersonations": "Recent Impersonations",
+  "impersonationToolsAuditTrailComingSoon": "Audit Trail (Coming Soon)",
+  "impersonationToolsAuditTrailDesc": "Detailed history of impersonation activity for compliance and monitoring.",
+  "impersonationToolsRolePreviewComingSoon": "Role Preview (Coming Soon)",
+  "impersonationToolsRolePreviewDesc": "Preview data access and permissions for the target user before impersonating.",
+  "unauthorizedAccess": "Unauthorized access.",
+  "errorLogsSectionTitle": "Error Logs",
+  "errorLogsSectionDesc": "Latest and most critical error logs for this franchise. Use filters to focus on specific severity levels. Switch to 'All Franchises' to review system-wide issues.",
+  "errorLogsSectionError": "Failed to load error logs.",
+  "errorLogsSectionEmpty": "No error logs found for the selected filters.",
+  "errorLogsSectionViewAll": "View All",
+  "errorLogsSectionSeverityFilter": "Severity:",
+  "errorLogsSectionFilterAny": "Any",
+  "errorLogsSectionSeverityError": "Error",
+  "errorLogsSectionSeverityWarning": "Warning",
+  "errorLogsSectionSeverityFatal": "Fatal",
+  "errorLogsSectionAt": "At",
+  "errorLogsSectionAnalyticsComingSoon": "Error Analytics (Coming Soon)",
+  "errorLogsSectionAnalyticsDesc": "Visualizations, charts, and error breakdowns coming soon.",
+  "errorLogsSectionAIInsightsComingSoon": "AI Error Insights (Coming Soon)",
+  "errorLogsSectionAIInsightsDesc": "AI-powered error clustering and root-cause suggestions are on the way.",
+  "comingSoon": "Coming soon!",
+  "featureTogglesSectionTitle": "Feature Toggles",
+  "featureTogglesSectionDesc": "Manage feature flags for this franchise. Only enabled features will be active for staff and users. Switch to 'All Franchises' to review defaults.",
+  "featureTogglesSectionError": "Failed to load feature toggles.",
+  "featureTogglesSectionEmpty": "No feature toggles found for this franchise.",
+  "featureTogglesSectionAuditTrailComingSoon": "Audit Trail (Coming Soon)",
+  "featureTogglesSectionAuditTrailDesc": "Feature toggle change history for tracking and compliance.",
+  "featureTogglesSectionAIBasedComingSoon": "AI-based Feature Suggestions (Coming Soon)",
+  "featureTogglesSectionAIBasedDesc": "Smart, usage-driven suggestions for enabling features.",
+  "featureTogglesSectionNoGlobalToggle": "Cannot toggle features globally. Select a franchise to enable/disable.",
+  "pluginRegistrySectionTitle": "Plugin Registry",
+  "pluginRegistrySectionDesc": "Manage integrations and plugins for this franchise. Enable, disable, or troubleshoot connections. Switch to 'All Franchises' to view system-wide status.",
+  "pluginRegistrySectionError": "Failed to load plugin data.",
+  "pluginRegistrySectionEmpty": "No plugins registered for this franchise.",
+  "pluginRegistrySectionMonitoringComingSoon": "Plugin Monitoring (Coming Soon)",
+  "pluginRegistrySectionMonitoringDesc": "Realtime plugin logs, uptime and error notifications coming soon.",
+  "pluginRegistrySectionMarketplaceComingSoon": "Plugin Marketplace (Coming Soon)",
+  "pluginRegistrySectionMarketplaceDesc": "Discover, install, and manage new integrations from a curated plugin marketplace.",
+  "pluginRegistrySectionNoGlobalToggle": "Cannot change plugin status globally. Select a franchise to enable/disable.",
+  "pluginRegistrySectionStatusConnected": "Connected",
+  "pluginRegistrySectionStatusError": "Error",
+  "pluginRegistrySectionStatusDisconnected": "Disconnected",
+  "pluginRegistrySectionLastSync": "Last Sync",
+  "allFranchisesLabel": "All Franchises",
+  "schemaBrowserSectionTitle": "Schema Browser",
+  "schemaBrowserSectionDesc": "Browse, inspect, and manage menu/category/modifier schemas for this franchise. Select a schema to see version info and details. Switch to 'All Franchises' to review shared schemas.",
+  "schemaBrowserSectionError": "Failed to load schema metadata.",
+  "schemaBrowserSectionEmpty": "No schemas found for this franchise.",
+  "schemaBrowserSectionSchemaDetails": "Schema Details",
+  "schemaBrowserSectionDetailsPlaceholder": "Schema fields, validation state, and JSON preview will appear here.",
+  "schemaBrowserSectionStatusActive": "Active",
+  "schemaBrowserSectionStatusDeprecated": "Deprecated",
+  "schemaBrowserSectionDiffsComingSoon": "Schema Diffs (Coming Soon)",
+  "schemaBrowserSectionDiffsDesc": "View schema diffs, compare versions, and see breaking changes across deployments.",
+  "schemaBrowserSectionValidationComingSoon": "Schema Validation (Coming Soon)",
+  "schemaBrowserSectionValidationDesc": "Automated validation, problem highlighting, and quick fixes for schemas.",
+  "schemaBrowserSectionLastUpdated": "Last Updated",
+  "schemaBrowserSectionUpdated": "Updated",
+  "auditTrailSectionTitle": "Audit Trail",
+  "auditTrailSectionDesc": "Timeline of data changes (menu, franchise, settings, users). Filter by action type or user. Select 'All Franchises' for a global view.",
+  "auditTrailSectionError": "Failed to load audit trail.",
+  "auditTrailSectionEmpty": "No audit entries found for the selected filters.",
+  "auditTrailSectionTypeFilter": "Type",
+  "auditTrailSectionActorFilter": "Actor",
+  "auditTrailSectionFilterAny": "Any",
+  "auditTrailSectionAt": "At",
+  "auditTrailSectionBy": "By",
+  "auditTrailSectionRevertComingSoon": "Revert/Restore (Coming Soon)",
+  "auditTrailSectionRevertDesc": "Quickly undo changes or restore previous data states from the audit trail.",
+  "auditTrailSectionExplainComingSoon": "Explain (Coming Soon)",
+  "auditTrailSectionExplainDesc": "Explain audit entries, highlight risks, and use AI for impact analysis.",
+  "developerErrorLogsScreenTitle": "Developer Error Logs",
+  "developerErrorLogsScreenError": "Failed to load error logs.",
+  "developerErrorLogsScreenEmpty": "No error logs match the current filters.",
+  "developerErrorLogsScreenFranchise": "Franchise",
+  "developerErrorLogsScreenSeverity": "Severity",
+  "developerErrorLogsScreenUser": "User",
+  "developerErrorLogsScreenDevice": "Device",
+  "developerErrorLogsScreenAt": "At",
+  "developerErrorLogsScreenStackTrace": "Stack Trace",
+  "developerErrorLogsScreenFilterAny": "Any",
+  "developerErrorLogsScreenDateRange": "Date Range",
+  "developerErrorLogsScreenAllDates": "All Dates",
+  "developerErrorLogsScreenTrendsComingSoon": "Trends & Analytics (Coming Soon)",
+  "developerErrorLogsScreenTrendsDesc": "Error type trends, top failing screens, and system anomaly detection.",
+  "developerErrorLogsScreenAIInsightsComingSoon": "AI Root Cause Analysis (Coming Soon)",
+  "developerErrorLogsScreenAIInsightsDesc": "Cluster similar errors, get likely causes and suggestions powered by AI.",
+  "adminErrorLogsScreenTitle": "Error Logs",
+  "adminErrorLogsScreenError": "Failed to load error logs.",
+  "adminErrorLogsScreenEmpty": "No error logs for your location in the selected date range.",
+  "adminErrorLogsScreenSeverity": "Severity",
+  "adminErrorLogsScreenAt": "At",
+  "adminErrorLogsScreenDateRange": "Date Range",
+  "adminErrorLogsScreenAllDates": "All Dates",
+  "adminErrorLogsScreenFilterAny": "Any",
+  "adminErrorLogsScreenSupportComingSoon": "Support Actions (Coming Soon)",
+  "adminErrorLogsScreenSupportDesc": "Contact support, mark as resolved, or escalate issues directly from this screen.",
+  "adminErrorLogsScreenTrendsComingSoon": "Trends & Patterns (Coming Soon)",
+  "adminErrorLogsScreenTrendsDesc": "See frequent issues, system health, and actionable tips to reduce problems.",
+  "impersonationDialogTitle": "Impersonate User",
+  "impersonationDialogButton": "Impersonate",
+  "impersonationDialogSearchHint": "Search by email or name...",
+  "impersonationDialogSelectUserFirst": "Select a user to impersonate.",
+  "impersonationDialogSuccessPrefix": "Now impersonating",
+  "impersonationDialogError": "Failed to load users.",
+  "impersonationDialogNoUsersFound": "No users found.",
+  "impersonationDialogSecurityNotice": "You are about to impersonate another user. All actions will be logged and audited. Do not share sensitive or personal customer data. Exiting impersonation restores your own access and context.",
+  "impersonationDialogAuditTrailComingSoon": "Audit Trail (Coming Soon)",
+  "impersonationDialogAuditTrailDesc": "View impersonation history, export logs, and enforce audit controls.",
+  "impersonationDialogAdvancedToolsComingSoon": "Advanced Tools (Coming Soon)",
+  "impersonationDialogAdvancedToolsDesc": "Session timeouts, role-limited impersonation, and support diagnostics.",
+  "closeButtonLabel": "Close",
+  "pluginConfigDialogTitle": "Plugin Config",
+  "pluginConfigDialogDesc": "View and update configuration for this plugin. Changes will take effect immediately.",
+  "pluginConfigDialogError": "Failed to load or save plugin configuration.",
+  "pluginConfigDialogNoFields": "This plugin has no configurable fields.",
+  "pluginConfigDialogSaveButton": "Save",
+  "pluginConfigDialogSaved": "Plugin configuration saved.",
+  "pluginConfigDialogHistoryComingSoon": "History (Coming Soon)",
+  "pluginConfigDialogHistoryDesc": "View and restore previous configuration states.",
+  "pluginConfigDialogValidationComingSoon": "Validation & Test (Coming Soon)",
+  "pluginConfigDialogValidationDesc": "Run plugin-specific validation, test API keys, and get troubleshooting help.",
+  "unauthorizedAccess": "Unauthorized access.",
+  "cancelButtonLabel": "Cancel",
+  "pluginRegistrySectionConfigureButton": "Configure"
 
   }
