Refactor: Model, Firestore service, error log updates, ARB & new models for HQ/Owner Portal

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1095,6 +1095,50 @@
   "pluginConfigDialogValidationDesc": "Run plugin-specific validation, test API keys, and get troubleshooting help.",
   "unauthorizedAccess": "Unauthorized access.",
   "cancelButtonLabel": "Cancel",
-  "pluginRegistrySectionConfigureButton": "Configure"
-
+  "pluginRegistrySectionConfigureButton": "Configure",
+  "ownerHQDashboardTitle": "Franchise HQ Dashboard",
+  "franchiseFinancials": "Financial Overview",
+  "multiBrandSnapshot": "Multi-Brand Overview",
+  "franchiseAlerts": "Alerts",
+  "quickLinks": "Quick Links",
+  "comingSoonFeatures": "Future Features",
+  "monthlyRevenue": "Monthly Revenue",
+  "pendingRoyalties": "Pending Royalties",
+  "activeStores": "Stores Reporting",
+  "overdueFees": "Overdue Fees",
+  "outstandingInvoices": "Outstanding Invoices",
+  "openInvoices": "Open",
+  "overdue": "Overdue",
+  "viewInvoices": "View All Invoices",
+  "payoutStatus": "Payouts",
+  "pending": "Pending",
+  "sent": "Sent",
+  "failed": "Failed",
+  "viewPayouts": "View All Payouts",
+  "locations": "Stores",
+  "noBrands": "No additional brands linked.",
+  "switchBrand": "Switch Brand",
+  "overduePaymentAlert": "Overdue franchise payment: Store #101",
+  "complianceAlert": "Compliance document missing: W-9 required",
+  "storePausedAlert": "Store #104 is paused for the season",
+  "noAlerts": "No active alerts.",
+  "alertHistory": "View Alert History",
+  "bankAccounts": "Bank Accounts",
+  "reporting": "Reports",
+  "billingSupport": "Billing Support",
+  "unauthorizedAccessTitle": "Unauthorized",
+  "unauthorizedAccessMessage": "You do not have permission to access this page.",
+  "returnHome": "Return to Home",
+  "announcements": "HQ Announcements",
+  "announcementsDesc": "Coming soon: Company-wide bulletins and major updates.",
+  "taxDocs": "1099/W-9 Export",
+  "taxDocsDesc": "Generate and export annual payout tax forms for all franchisees.",
+  "multiCurrency": "Multi-Currency",
+  "multiCurrencyDesc": "Enable international/multi-currency payment support.",
+  "bulkOps": "Bulk Operations",
+  "bulkOpsDesc": "Send invoices, set fees, or pause multiple stores at once.",
+  "integrations": "Accounting/API Integrations",
+  "integrationsDesc": "Connect with QuickBooks, Xero, Sage, and more.",
+  "scheduledReports": "Scheduled Reports",
+  "scheduledReportsDesc": "Schedule, download, or auto-email custom finance reports."
   }
