Implement new login flow, add role/claims sync, update Firestore rules and UI for robust invite/admin sign-in

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1156,6 +1156,32 @@
   "openingBalance": "Opening Balance",
   "projectedInflow": "Projected Inflow",
   "projectedOutflow": "Projected Outflow",
-  "projectedClosing": "Projected Closing"
+  "projectedClosing": "Projected Closing",
+  "appLandingHeroHeadline": "All-in-One Franchise & Restaurant Management",
+  "appLandingHeroSubheadline": "Mobile Ordering, Customization, Analytics, and Powerful Admin Tools for Modern Franchises.",
+  "appLandingAboutTitle": "About Doughboys Franchise Admin Portal",
+  "appLandingAboutBody": "Doughboys Pizzeria empowers franchises with a unified platform for online ordering, menu management, analytics, inventory, staff management, and more.",
+  "appLandingFeaturesTitle": "Key Features",
+  "featureMobileOrdering": "Mobile Ordering for Customers",
+  "featureFranchiseManagement": "Franchise Management for Owners and Admins",
+  "featureCustomMenus": "Customizable Menus & Ingredients",
+  "featureFinancialTools": "Financial & Inventory Tools",
+  "featureRoleBasedAccess": "Role-Based Secure Access",
+  "featureAnalytics": "Detailed Analytics & Insights",
+  "featureSupportTools": "Integrated Support & Feedback Tools",
+  "appLandingGalleryTitle": "Screenshots & Gallery",
+  "appLandingDemoTitle": "See It In Action",
+  "appLandingDemoSubtitle": "Watch a quick walkthrough of our app.",
+  "bookDemo": "Book a Demo",
+  "login": "Login",
+  "videoDemoPlaceholder": "Demo Video Coming Soon",
+  "watchDemo": "Watch Demo",
+  "devPanelTitle": "Developer Panel",
+  "devPanelDesc": "Internal tools for development, QA, and debugging.",
+  "devPanelFeatureToggles": "Feature Toggles",
+  "futureFeaturesTitle": "What's Coming Next?",
+  "futureFeaturesBody": "New modules for delivery tracking, marketing automation, and more coming soon.",
+  "copyright": "Copyright",
+  "allRightsReserved": "All rights reserved."
 
   }
