Bugfix: Dashboard routing and profile logic, individual file updates

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1199,6 +1199,7 @@
   "tryAgain": "Try Again",
   "futureFeaturesTitle": "Upcoming Features",
   "futureFeaturesBody": "We’re working on additional profile and access controls. Stay tuned!",
-  "redirectingToOwnerHQDashboard": "Redirecting to HQ Dashboard"
+  "redirectingToOwnerHQDashboard": "Redirecting to HQ Dashboard",
+  "selectFranchiseToManage": "Select Franchise To Manage"
 
   }
