Add invoice-related screens, widgets, services, update dashboard and core models/providers, and localization changes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1218,6 +1218,131 @@
   "alert_custom_fields": "Custom Fields",
   "alert_dismissed_success": "Alert dismissed.",
   "alert_dismissed_error": "Failed to dismiss alert.",
-  "alert_dismiss_button": "Dismiss"
+  "alert_dismiss_button": "Dismiss",
+  "menuItemId": "Menu Item ID",
+  "menuItemName": "Menu Item Name",
+  "category": "Category",
+  "categoryId": "Category ID",
+  "description": "Description",
+  "price": "Price",
+  "availability": "Availability",
+  "taxCategory": "Tax Category",
+  "sku": "SKU",
+  "image": "Image",
+  "dietaryTags": "Dietary Tags",
+  "allergens": "Allergens",
+  "prepTime": "Preparation Time",
+  "nutrition": "Nutrition",
+  "customizations": "Customizations",
+  "customizationGroups": "Customization Groups",
+  "categoryId": "Category ID",
+  "categoryName": "Category Name",
+  "auditLogId": "Audit Log ID",
+  "action": "Action",
+  "userId": "User ID",
+  "timestamp": "Timestamp",
+  "ipAddress": "IP Address",
+  "details": "Details",
+  "promoId": "Promo ID",
+  "name": "Name",
+  "discount": "Discount",
+  "code": "Code",
+  "active": "Active",
+  "type": "Type",
+  "applicableItems": "Applicable Items",
+  "maxUses": "Max Uses",
+  "maxUsesType": "Max Uses Type",
+  "minOrderValue": "Minimum Order Value",
+  "startDate": "Start Date",
+  "endDate": "End Date",
+  "segment": "Segment",
+  "timeRules": "Time Rules",
+  "period": "Period",
+  "totalOrders": "Total Orders",
+  "totalRevenue": "Total Revenue",
+  "averageOrderValue": "Average Order Value",
+  "mostPopularItem": "Most Popular Item",
+  "retention": "Retention",
+  "uniqueCustomers": "Unique Customers",
+  "cancelledOrders": "Cancelled Orders",
+  "addOnRevenue": "Add-on Revenue",
+  "toppingCounts": "Topping Counts",
+  "comboCounts": "Combo Counts",
+  "addOnCounts": "Add-on Counts",
+  "orderStatusBreakdown": "Order Status Breakdown",
+  "franchiseId": "Franchise ID",
+  "noFranchiseSelected": "No franchise selected.",
+  "invoiceListTitle": "Invoices",
+  "searchInvoices": "Search invoices",
+  "errorLoadingInvoices": "Error loading invoices.",
+  "noInvoicesFound": "No invoices found.",
+  "filterByStatus": "Filter by status",
+  "allStatuses": "All statuses",
+  "invoiceNumber": "Invoice Number",
+  "paid": "Paid",
+  "draft": "Draft",
+  "refunded": "Refunded",
+  "voided": "Voided",
+  "sent": "Sent",
+  "overdue": "Overdue",
+  "failed": "Failed",
+  "noInvoices": "No Invoices",
+  "invoice": "Invoice",
+  "errorLoadingInvoice": "Error loading invoice.",
+  "invoiceNotFound": "Invoice not found.",
+  "issueDate": "Issue Date",
+  "dueDate": "Due Date",
+  "currency": "Currency",
+  "noLineItems": "No line items available.",
+  "lineItems": "Line Items",
+  "totals": "Totals",
+  "noAuditTrail": "No audit trail available.",
+  "auditTrail": "Audit Trail",
+  "noSupportNotes": "No support notes available.",
+  "supportNotes": "Support Notes",
+  "paid": "Paid",
+  "draft": "Draft",
+  "refunded": "Refunded",
+  "voided": "Voided",
+  "sent": "Sent",
+  "overdue": "Overdue",
+  "failed": "Failed",
+  "archived": "Archived",
+  "viewed": "Viewed",
+  "exportInvoices": "Export Invoices",
+  "selectDate": "Select Date",
+  "exportFormat": "Export Format",
+  "exportFailed": "Export failed. Please try again.",
+  "byUser": "By user",
+  "eventCreated": "Created",
+  "eventSent": "Sent",
+  "eventViewed": "Viewed",
+  "eventPaid": "Paid",
+  "eventOverdue": "Overdue",
+  "eventRefunded": "Refunded",
+  "eventVoided": "Voided",
+  "eventFailed": "Failed",
+  "searchInvoices": "Search invoices",
+  "filterByStatus": "Filter by status",
+  "allStatuses": "All statuses",
+  "sortBy": "Sort by",
+  "sortDateDesc": "Date (Newest first)",
+  "sortDateAsc": "Date (Oldest first)",
+  "sortTotalDesc": "Total (High to Low)",
+  "sortTotalAsc": "Total (Low to High)",
+  "actionCompleted": "Action completed successfully.",
+  "actionFailed": "Action failed. Please try again.",
+  "markSelectedPaid": "Mark Selected as Paid",
+  "sendPaymentReminder": "Send Payment Reminder",
+  "invoices": "Invoices",
+  "viewAllInvoices": "View All Invoices",
+  "noOverdueInvoices": "No Overdue Invoices",
+  "open": "Open",
+  "createInvoice": "Create Invoice",
+  "totalInvoices": "Total Invoices",
+  "overdueInvoices": "Overdue Invoices",
+  "paidInvoices": "Paid Invoices",
+  "outstandingBalance": "Outstanding Balance",
+  "lastInvoiceDate": "Last Invoice Date"
 
   }
