Implement payouts filtering/search, bulk ops UI, Firestore logic, and UI refactor

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1343,6 +1343,54 @@
   "overdueInvoices": "Overdue Invoices",
   "paidInvoices": "Paid Invoices",
   "outstandingBalance": "Outstanding Balance",
-  "lastInvoiceDate": "Last Invoice Date"
+  "lastInvoiceDate": "Last Invoice Date",
+  "billingSummary": "Billing Summary",
+  "failedToLoadSummary": "Failed to load summary. Please try again.",
+  "totalOutstanding": "Total Outstanding",
+  "paidLastNDays": "Paid in last {days} days",
+  "payNow": "Pay Now",
+  "downloadSummary": "Download Summary",
+  "downloadStarted": "Download started...",
+  "downloadFailed": "Download failed",
+  "payoutAlert": "Payout alert",
+  "amount": "Amount",
+  "createdAt": "Created",
+  "sentAt": "Sent At",
+  "failedAt": "Failed At",
+  "payoutMethod": "Method",
+  "bankAccount": "Account",
+  "notes": "Notes",
+  "payoutId": "Payout ID",
+  "noPayoutsFound": "No payouts found.",
+  "noDataFound": "No data found.",
+  "payoutNotFound": "Payout not found.",
+  "payoutDetail": "Payout Detail",
+  "failureReason": "Failure Reason",
+  "noAuditTrailFound": "No audit trail found.",
+  "attachments": "Attachments",
+  "by": "by",
+  "selectedItemsCount": "{count} selected",
+  "exportSelected": "Export selected",
+  "markAsSent": "Mark as sent",
+  "markAsFailed": "Mark as failed",
+  "addAttachment": "Add attachment",
+  "addNote": "Add note",
+  "approveSelected": "Approve selected",
+  "deleteSelected": "Delete selected",
+  "attachFile": "Attach file",
+  "uploading": "Uploading...",
+  "featureDeveloperOnly": "This feature is for developer use only.",
+  "addNoteHint": "Add a note...",
+  "noNotesYet": "No notes yet.",
+  "failedToSave": "Failed to save note.",
+  "failedToDelete": "Failed To Delete.",
+  "deleteNote": "Delete Note",
+  "confirmDeleteNote": "Confirm Delete Note",
+  "removeAttachment": "Remove Attachment",
+  "bulkStatusSuccess": "Bulk Success",
+  "deleteSuccess": "Delete Successfull",
+  "resetToPending": "Reset Status To Pending",
+  "searchPayoutsHint": "Search Payouts"
 
+  
   }
